# OasisC

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
extras/: CMakeLists.txt
extras/include/Oasis/: FromString.h
extras/src/: FromString.cpp  MathMLSerializer.cpp
extras/tests/: CMakeLists.txt  main.c
include/Oasis/: Add.h  Divide.h  Expression.h  Multiply.h  Real.h  Subtract.h
io/: CMakeLists.txt
io/include/Oasis/: MathMLSerializer.h
io/src/: FromString.cpp
io/tests/: CMakeLists.txt
scripts/: cmake
src/: Add.cpp  Divide.cpp  Expression.cpp  Multiply.cpp  Real.cpp  Subtract.cpp
tests/: CMakeLists.txt  main.c
tests/cmake/: FetchMUnit.cmake
